--- a/detailsQuestion.html
+++ b/detailsQuestion.html
@@ -11,7 +11,10 @@
 </head>
 <body>
    <div class="content" id="titleQuestion"></div>
-   <div class="answer" id="answer"></div>
+   <div class="answer" id="answer">
+       <div class="titleAnswer" id="titleAnswer"></div>
+
+   </div>
 
 
 <script src="details.js">
